app/components/detail/detail.css
.detail {
  height: 60%;
  bottom: 30%;
  margin: 0 auto;

  /*text-align: center;*/
  padding-bottom: 80px;
}

.detail *{
  padding: 0px;
}

.sq-img-container {
  margin: 0;
  padding: 0;
}
.big-img {
  margin: 0 auto;
  height: 60vh;
}
.big-img-container {
  margin: 0 0;
  width: 100%;
  background-color: black;
}
.button-container {
  margin: 0;
  padding: 0;
}
.sq-img {
  width: 20%;
  margin-top: 30px;
  margin-left: 30px !important;
  margin-right: 10px !important;
  vertical-align: top;
  display: inline-block;
}
.detail .row {
  margin-left: 7%;
  margin-right: 0px;
  margin-bottom: 0px;
  margin-top: 0px;
  height: 50%;
}

.detail-hotel-info {
  height: 150px;
  margin-bottom: 200px;
}

.detail-hotel-info * {
  margin-left: 0px;
}

.spg-brg{
  position: relative;
}

.detail-brg {
  position: absolute;
  top: 25%;
  left: 40%;
}

.detail-spg {
  position: absolute;
  top: 55%;
  left: 33%;
}
.detail-location {
  margin-top: -3%;
  color: grey;
}
.detail-text{
  /*margin-left: 0;*/
  margin-top: 2%;
}
.detail-all {
  margin-top: 15% !important;
  /*margin-bottom: 5%;*/
  margin-right: 30px;
  display: inline-block;
}
.detail-progress {
  margin-left: 60%;
}

.center {
  text-align: center;
}

